--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
+body {
+    background: white; 
+    font-family: 'Times New Roman', Times, serif;
+    color:white;
+    text-transform: uppercase;
+    margin: 5px;
+  } 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.scoreboard {
+    background:rgba(0, 0, 0, 0.877);
+    width: 600px;
+    margin: 30px auto;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+   .header {
+    padding: 4px 10px;
+    text-align: center;
+    align-items: center;
+    background-color: ;
+    border-radius: 15px 15px 0 0;
+    border-bottom: solid 2px #444;
   }
-  to {
-    transform: rotate(360deg);
+
+    .header h1 {
+    flex-grow: 1;
+    font-size: 2em;
+    letter-spacing: 2px;
+    font-weight: normal;
   }
-}
