--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,60 @@ body {
     letter-spacing: 2px;
     font-weight: normal;
   }
+
+  .player {
+    display: flex;
+    font-size: 1.2em;
+    border-bottom: solid 2px #444;
+    letter-spacing: 2px;
+  }
+  
+    .player-name {
+      flex-grow: 1;
+      padding: 20px 10px 10px 10px;
+    }
+  
+    .counter {
+      display: flex;
+      
+    }
+  
+    .counter-action {
+      border: none;
+      font-weight: bold;
+      color: black;
+      display: block;
+      padding: 20px 20px;
+     
+    }
+  
+    .counter-action.increment {
+      background: white;
+      
+    }
+  
+    .counter-action.increment:hover {
+      background: white;
+      cursor: pointer;
+      
+    }
+  
+    .counter-action.decrement {
+      background: white;
+    }
+  
+    .counter-action.decrement:hover {
+      background: white;
+      cursor: pointer;
+    }
+  
+    .counter-score {
+      flex-grow: 1;
+      background: #2b2b2b;
+      color: #FAFAFA;
+      text-align: center;
+      font-family: monospace;
+      padding: 10px;
+      font-size: 2em;
+    }
+  
