--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
-    background: white; 
+    background: grey; 
     font-family: 'Times New Roman', Times, serif;
-    color:white;
+    color: white;
     text-transform: uppercase;
     margin: 5px;
   } 
@@ -30,14 +30,14 @@ body {
 
   .player {
     display: flex;
-    font-size: 1.2em;
+    font-size: 1.3em;
     border-bottom: solid 2px #444;
     letter-spacing: 2px;
   }
   
     .player-name {
-      flex-grow: 1;
-      padding: 20px 10px 10px 10px;
+      flex-grow: 2;
+      padding: 20px 5px 5px 10px;
     }
   
     .counter {
@@ -50,7 +50,7 @@ body {
       font-weight: bold;
       color: black;
       display: block;
-      padding: 20px 20px;
+      padding: 20px 25px;
      
     }
   
@@ -80,7 +80,11 @@ body {
       color: #FAFAFA;
       text-align: center;
       font-family: monospace;
-      padding: 10px;
-      font-size: 2em;
+      padding: 15px;
+      font-size: 1.6em;
     }
   
+.remove-player {
+    cursor: pointer;
+    color: red;
+}
